--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <h2 class="font-cormorant">Dagens lunch! 09/05</h2><h2 class="font-cormorant"> </h2>
         <li class="lunch">
             
-             <ul>Fläsknoisette med bearnaise, rödinssky och rostat potatis</ul>
+             <ul>Fläsknoisette med bearnaise, rödvinssky och rostad potatis</ul>
             <ol>Dillbakad fisk med äggsås och kokt potatis</ol>
             <ol>Pizza 1-3</ol>
             <ol>Pasta bolognese</ol>
