--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
         <h2 class="font-cormorant">Dagens lunch! 09/05</h2><h2 class="font-cormorant"> </h2>
         <li class="lunch">
             
-             <ul>Fläsknoisette med bearnaise, rödvinssky och rostad potatis</ul>
-            <ol>Dillbakad fisk med äggsås och kokt potatis</ol>
+             <ul>Pytt Bellman med stekt ägg och rödbetor </ul>
+            <ol>Stekt strömming med potatismos, lingon och skirat smör</ol>
+            <ol>Tacopaj med gräddfil och grönsaker<ol>
             <ol>Pizza 1-3</ol>
             <ol>Pasta bolognese</ol>
             <ol>Kycklingburgertallrik med pommes</ol>
