--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <h2 class="font-cormorant">Dagens lunch! 09/11</h2><h2 class="font-cormorant"> </h2>
         <li class="lunch">
             
-             <ol>Panerad kyckling med tomat och paprikasås samt ris</ol>
-            <ol>Lax med cesardressing, grönsaker och kokt potatis</ol>
+             <ol>Tunna revben med kryddig potatissallad, bluecheese och krämig sweetchili dressing</ol>
+            <ol>Ört och parmesanbakad fisk med grönärtssås och kokt potatis</ol>
             
             <ol>Pizza 1-3</ol>
             <ol>Pasta bolognese</ol>
