--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <h2 class="font-cormorant">Dagens lunch! 09/16</h2><h2 class="font-cormorant"> </h2>
         <li class="lunch">
             
-             <ol>Köttfärs med den populära turkiska baklan(tomatröra), serveras med ris</ol>
-            <ol>Lax med remouladsås och kokt potatis</ol>
+             <ol>Stekt fläsk med raggmunk och lingon</ol>
+            <ol>Fisk med ägg- och persiljesås samt kokt potatis</ol>
             
             <ol>Pizza 1-3</ol>
             <ol>Pasta bolognese</ol>
