--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <h2 class="font-cormorant">Dagens lunch! 09/23</h2><h2 class="font-cormorant"> </h2>
         <li class="lunch">
             
-             <ol>Kalops med rödbetor och kokt potatis</ol>
-            <ol>Panerad fisk med citronmajonäs och kokt potatis</ol>
+             <ol>Kålpudding med gräddsås, lingon och kokt potatis</ol>
+            <ol>Panerad fisk med örtmajonäs och kokt potatis</ol>
             
             <ol>Pizza 1-10</ol>
             <ol>Pasta bolognese</ol>
