--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <h2 class="font-cormorant">Dagens lunch! 09/27</h2><h2 class="font-cormorant"> </h2>
         <li class="lunch">
             
-             <ol>Rostbiff med rödvinssky och potatisgratäng</ol>
-            <ol>Lax med ceasardressing och kokt potatis</ol>
+             <ol>Fläskgryta med ris</ol>
+            <ol>Stekt strömming med potatismos, skirat smör och lingon</ol>
             
             <ol>Pizza 1-10</ol>
             <ol>Pasta bolognese</ol>
