--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <h2 class="font-cormorant">Dagens lunch! 10/1</h2><h2 class="font-cormorant"> </h2>
         <li class="lunch">
             
-             <ol>Stekt fläsk med raggmunk och lingon</ol>
-            <ol>Lax med hummersky, picklad fänkål och kokt potatis</ol>
+             <ol>Örtbakad kyckling med chilicremé och ris</ol>
+            <ol>Chilibakad lax med citronhollandaise och kokt potatis</ol>
             
             <ol>Pizza 1-10</ol>
             <ol>Pasta bolognese</ol>
