--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <h2 class="font-cormorant">Dagens lunch! 10/21</h2><h2 class="font-cormorant"> </h2>
         <li class="lunch">
             
-             <ol>Slottstek med gräddsås, pressgurka och kokt potatis</ol>
-            <ol>Lax med gräddsås och kokt potatis</ol>
+             <ol>Stekt fläsk med lingon, löksås, raggmunk och kokt potatis</ol>
+            <ol>Panerad fisk med dillsås och kokt potatis</ol>
             <ol>Kebabgryta med ris</ol>
             <ol>Pizza 1-10</ol>
             <ol>Kycklingpasta</ol>
