--- a/index.html
+++ b/index.html
@@ -68,16 +68,17 @@
         <h2 class="font-cormorant">Dagens lunch! 10/21</h2><h2 class="font-cormorant"> </h2>
         <li class="lunch">
             
-             <ol>Gratinerad köttfärslimpa i tomatsås med kokt potatis</ol>
-            <ol>Pestobakad fisk med gräddsås och kokt potatis</ol>
-            <ol>Kebabgryta med ris</ol>
+             <ol>Brynt kyckling med bacon och champinjoner, skysås samt ris</ol>
+            <ol>Stekt strömming med lingon, skirat smör och potatispuré</ol>
+            <ol>Pyttipanna med stekt ägg och lingon</ol>
+            <ol>Kycklingtoast med pommes och dipp</ol>
             <ol>Pizza 1-10</ol>
-            <ol>Kycklingpasta</ol>
+            <ol>Pasta bolognese</ol>
             <ol>Hamburgertallrik 150g</ol>
             <ol>Kyckling-kebabtallrik</ol>
             <ol>Kebabtallrik</ol>
             <ol>Falukorv med ägg och stekt potatis</ol>
-            <ol>Cevapcici med tzatziki, ajvar och pommes</ol>
+            
             <ol>Ost och skinksallad</ol>
 
             </li>
