--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <h2 class="font-cormorant">Dagens lunch! 4/11</h2><h2 class="font-cormorant"> </h2>
         <li class="lunch">
             
-             <ol>Isterband med rödbetor och persiljestuvad potatis</ol>
-            <ol>Fiskgryta med kokt potatis</ol>
+             <ol>Srekt fläsk med lingon och löksås, raggmunk eller kokt potatis</ol>
+            <ol>FPanerad fisk med dillsås och kokt potatis</ol>
             <ol>Pyttipanna med stekt ägg och lingon</ol>
             
             <ol>Pizza 1-10</ol>
