--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <ol>Kebabtallrik</ol>
             <ol>Falukorv med ägg och stekt potatis</ol>
             
-            <ol>Ost och skinksallad</ol>
+            <ol>Halloumisallad med bulgur</ol>
 
             </li>
 
